# FFGUI

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  app.rc  build.bat  build.sh  installer.iss  linux-build.sh  resources.qrc
.github/workflows/: build.yml
src/: FFmpegProcessor.cpp  FFmpegProcessor.h  MainWindow.cpp  MainWindow.h  MediaPlayer.cpp  MediaPlayer.h  PresetManager.cpp  PresetManager.h  main.cpp  mainwindow.ui  utils.cpp  utils.h
